--- a/recipes/recipes/lasagna.html
+++ b/recipes/recipes/lasagna.html
@@ -2,17 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Lasagna</title>
 </head>
 <body>
     <h1>Lasagna</h1>
 
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9396682.jpg&w=875&h=586&c=sc&poi=face&q=60" alt="Finished lasagna">
+    <img src="../images/lasagna-image.jpg" alt="Finished lasagna">
 
     <h2>Description</h2>
     <p>
         <strong>Prep</strong>: 30 mins. <strong>Cook</strong>: 30 mins. <strong>Total</strong>: 1 hr.
-            <strong>Servings</strong>: 8. <strong>Yield</strong>: 1 9x13 inch pan
+        <strong>Servings</strong>: 8. <strong>Yield</strong>: 1 9x13 inch pan
     </p>
 
     <h2>Ingredients</h2>
@@ -29,10 +29,28 @@
 
     <h2>Steps</h2>
     <ol>
-        <li>Bring a large pot of lightly salted water to a boil. Add pasta and cook for 8 to 10 minutes or until al dente; drain.</li>
-        <li>Preheat oven to 350 degrees F (175 degrees C). In a large skillet over medium-high heat, brown beef and season with salt and pepper; drain. Stir in spaghetti sauce and garlic and simmer 5 minutes.</li>
-        <li>In a medium bowl, combine mozzarella, Cheddar and ricotta; stir well. In 9x13 inch pan, alternate layers of noodles, meat mixture and cheese mixture until pan is filled.</li>
-        <li>Bake in preheated oven for 30 minutes, or until cheese is melted and bubbly.</li>
+        <li>Bring a large pot of lightly salted water to a boil. Add pasta and 
+            cook for 8 to 10 minutes or until al dente; drain.</li>
+
+        <li>Preheat oven to 350 degrees F (175 degrees C). In a large 
+            skillet over medium-high heat, brown beef and season with salt 
+            and pepper; drain. Stir in spaghetti sauce and garlic and simmer 
+            5 minutes.</li>
+
+        <li>In a medium bowl, combine mozzarella, Cheddar and ricotta; 
+            stir well. In 9x13 inch pan, alternate layers of noodles, 
+            meat mixture and cheese mixture until pan is filled.</li>
+
+        <li>Bake in preheated oven for 30 minutes, or until cheese 
+            is melted and bubbly.</li>
     </ol>
+
+    <h3>Checkout other recipes</h3>
+    <ul>
+        <li><a href="./charlotte.html">Charlotte recipe</a></li>
+        <li><a href="./borscht.html">Borscht recipe</a></li>
+    </ul>
+
+    <a href="../index.html">Return to main page</a>
 </body>
 </html>
