--- a/recipes/index.html
+++ b/recipes/index.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+
+        <img src="./images/chef.jpg" alt="Chef">
+
         <ul>
             <li><a href="recipes/lasagna.html">Lasagna recipe</a></li>
             <li><a href="recipes/charlotte.html">Charlotte recipe</a></li>
