Added some fancy css styling

--- a/recipes/recipes/charlotte.html
+++ b/recipes/recipes/charlotte.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Charlotte</title>
+    <link rel="stylesheet" href="../styles/recipe.css">
 </head>
 <body>
-    <h1>Charlotte</h1>
+    <h1 class="center-aligned">Charlotte</h1>
 
-    <img src="../images/charllote-image.jpg" alt="Finished charlotte">
+    <img src="../images/charllote-image.jpg" alt="Finished charlotte" class="center-image">
 
-    <h2>Description</h2>
-    <p>
+    <h2 class="center-aligned">Description</h2>
+    <p class="center-aligned text">
         <strong>Prep</strong>: 15 mins. <strong>Cook</strong>: 50 mins. 
         <strong>Additional</strong>: 15 mins. <strong>Total</strong>: 1 hr 20 mins.
         <strong>Servings</strong>: 4. <strong>Yield</strong>: 1 apple Charlotte.
@@ -55,12 +56,12 @@
             onto a serving platter.</li>
     </ol>
 
-    <h3>Checkout other recipes</h3>
+    <h2>Checkout other recipes</h2>
     <ul>
         <li><a href="./lasagna.html">Lasagna recipe</a></li>
         <li><a href="./borscht.html">Borscht recipe</a></li>
     </ul>
 
-    <a href="../index.html">Return to main page</a>
+    <a href="../index.html" id="return-link">Return to main page</a>
 </body>
 </html>
