--- a/recipes/recipes/lasagna.html
+++ b/recipes/recipes/lasagna.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Lasagna</title>
+    <link rel="stylesheet" href="../styles/recipe.css">
 </head>
 <body>
-    <h1>Lasagna</h1>
+    <h1 class="center-aligned">Lasagna</h1>
 
-    <img src="../images/lasagna-image.jpg" alt="Finished lasagna">
+    <img src="../images/lasagna-image.jpg" alt="Finished lasagna" class="center-image">
 
-    <h2>Description</h2>
-    <p>
+    <h2 class="center-aligned">Description</h2>
+    <p class="center-aligned">
         <strong>Prep</strong>: 30 mins. <strong>Cook</strong>: 30 mins. <strong>Total</strong>: 1 hr.
         <strong>Servings</strong>: 8. <strong>Yield</strong>: 1 9x13 inch pan
     </p>
@@ -45,12 +46,12 @@
             is melted and bubbly.</li>
     </ol>
 
-    <h3>Checkout other recipes</h3>
+    <h2>Checkout other recipes</h2>
     <ul>
         <li><a href="./charlotte.html">Charlotte recipe</a></li>
         <li><a href="./borscht.html">Borscht recipe</a></li>
     </ul>
 
-    <a href="../index.html">Return to main page</a>
+    <a href="../index.html" id="return-link">Return to main page</a>
 </body>
 </html>
