--- a/recipes/recipes/borscht.html
+++ b/recipes/recipes/borscht.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Borscht</title>
+    <link rel="stylesheet" href="../styles/recipe.css">
 </head>
 <body>
-    <h1>Borscht</h1>
+    <h1 class="center-aligned">Borscht</h1>
 
-    <img src="../images/borscht-image.jpg" alt="Finished borscht">
+    <img src="../images/borscht-image.jpg" alt="Finished borscht" class="center-image">
 
-    <h2>Description</h2>
-    <p>
+    <h2 class="center-aligned">Description</h2>
+    <p class="center-aligned">
         <strong>Prep</strong>: 25 mins. <strong>Cook</strong>: 1 hr. 
         <strong>Total</strong>: 1 hr 25 mins.
         <strong>Servings</strong>: 8. <strong>Yield</strong>: 8 servings.
@@ -60,12 +61,12 @@
             more. Stir in remaining bell pepper, season with black pepper, and serve.</li>
     </ol>
 
-    <h3>Checkout other recipes</h3>
+    <h2>Checkout other recipes</h2>
     <ul>
         <li><a href="./lasagna.html">Lasagna recipe</a></li>
         <li><a href="./charlotte.html">Charlotte recipe</a></li>
     </ul>
 
-    <a href="../index.html">Return to main page</a>
+    <a href="../index.html" id="return-link">Return to main page</a>
 </body>
 </html>
