Damn css is hard

--- a/recipes/recipes/borscht.html
+++ b/recipes/recipes/borscht.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../styles/recipe.css">
 </head>
 <body>
+    <div>
     <h1 class="center-aligned">Borscht</h1>
 
     <img src="../images/borscht-image.jpg" alt="Finished borscht" class="center-image">
@@ -68,5 +69,6 @@
     </ul>
 
     <a href="../index.html" id="return-link">Return to main page</a>
+    </div>
 </body>
 </html>
