--- a/recipes/recipes/charlotte.html
+++ b/recipes/recipes/charlotte.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../styles/recipe.css">
 </head>
 <body>
+    <div>
     <h1 class="center-aligned">Charlotte</h1>
 
     <img src="../images/charllote-image.jpg" alt="Finished charlotte" class="center-image">
@@ -63,5 +64,6 @@
     </ul>
 
     <a href="../index.html" id="return-link">Return to main page</a>
+    </div>
 </body>
 </html>
