--- a/recipes/recipes/lasagna.html
+++ b/recipes/recipes/lasagna.html
@@ -6,12 +6,13 @@
     <link rel="stylesheet" href="../styles/recipe.css">
 </head>
 <body>
-    <h1 class="center-aligned">Lasagna</h1>
+<div>
+    <h1>Lasagna</h1>
 
-    <img src="../images/lasagna-image.jpg" alt="Finished lasagna" class="center-image">
+    <img src="../images/lasagna-image.jpg" alt="Finished lasagna">
 
-    <h2 class="center-aligned">Description</h2>
-    <p class="center-aligned">
+    <h2>Description</h2>
+    <p>
         <strong>Prep</strong>: 30 mins. <strong>Cook</strong>: 30 mins. <strong>Total</strong>: 1 hr.
         <strong>Servings</strong>: 8. <strong>Yield</strong>: 1 9x13 inch pan
     </p>
@@ -53,5 +54,6 @@
     </ul>
 
     <a href="../index.html" id="return-link">Return to main page</a>
+</div>
 </body>
 </html>
