--- a/recipes/index.html
+++ b/recipes/index.html
@@ -6,14 +6,16 @@
         <link rel="stylesheet" href="styles/index.css">
     </head>
     <body>
-        <h1>Odin Recipes</h1>
+        <div>
+            <h1>Odin Recipes</h1>
 
-        <img src="./images/chef.jpg" alt="Chef">
+            <img src="./images/chef.jpg" alt="Chef">
 
-        <ul>
-            <li><a href="recipes/lasagna.html">Lasagna recipe</a></li>
-            <li><a href="recipes/charlotte.html">Charlotte recipe</a></li>
-            <li><a href="recipes/borscht.html">Borscht recipe</a></li>
-        </ul>
+            <ul>
+                <li><a href="recipes/lasagna.html">Lasagna recipe</a></li>
+                <li><a href="recipes/charlotte.html">Charlotte recipe</a></li>
+                <li><a href="recipes/borscht.html">Borscht recipe</a></li>
+            </ul>
+        </div>
     </body>
 </html>
