Experementing on styling

--- a/todo/index.html
+++ b/todo/index.html
@@ -3,8 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <script src="dist/script.js"></script>
+    <link rel="stylesheet" href="style/styles.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="search-bar">
+            <input type="search" placeholder="Search for task">
+            <button>🔍</button>
+        </div>
+        <div class="tasks-container">
+            <ul class="tasks">
+                <span>⃝</span><li>Do homework</li>
+            </ul>
+        </div>
+        <div>
+            <button class="add-button">+</button>
+        </div>
+    </div>
 </body>
 </html>
