--- a/todo/index.html
+++ b/todo/index.html
@@ -8,17 +8,18 @@
 </head>
 <body>
     <div class="container">
-        <div class="search-bar">
-            <input type="search" placeholder="Search for task">
-            <button>🔍</button>
+        <h3>Todo</h3>
+        <div class="add-area">
+            <input type="text" id="entered-task">
+            <button class="add">+</button>
         </div>
         <div class="tasks-container">
             <ul class="tasks">
-                <span>⃝</span><li>Do homework</li>
+                <li><span>Do homework</span><button class="remove">x</button></li>
+                <li><span>lorem30</span><button class="remove">x</button></li>
+                <li><span>Do the dishes</span><button class="remove">x</button></li>
+                <li><span>Make a game</span><button class="remove">x</button></li>
             </ul>
-        </div>
-        <div>
-            <button class="add-button">+</button>
         </div>
     </div>
 </body>
