Added the ability to add and remove tasks

--- a/todo/index.html
+++ b/todo/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <script src="dist/script.js"></script>
+    <script defer src="dist/script.js"></script>
     <link rel="stylesheet" href="style/styles.css">
 </head>
 <body>
@@ -15,10 +15,7 @@
         </div>
         <div class="tasks-container">
             <ul class="tasks">
-                <li><span>Do homework</span><button class="remove">x</button></li>
-                <li><span>lorem30</span><button class="remove">x</button></li>
-                <li><span>Do the dishes</span><button class="remove">x</button></li>
-                <li><span>Make a game</span><button class="remove">x</button></li>
+                
             </ul>
         </div>
     </div>
