Added wraping of tasks pages

--- a/todo/index.html
+++ b/todo/index.html
@@ -8,15 +8,20 @@
 </head>
 <body>
     <div class="container">
-        <h3>Todo</h3>
-        <div class="add-area">
-            <input type="text" id="entered-task">
-            <button class="add">+</button>
+        <div class="content">
+            <h3>Todo</h3>
+            <div class="add-area">
+                <input type="text" id="entered-task">
+                <button class="add">+</button>
+            </div>
+            <div class="tasks-container">
+                <ul class="tasks">
+                    
+                </ul>
+            </div>
         </div>
-        <div class="tasks-container">
-            <ul class="tasks">
-                
-            </ul>
+        <div class="button-list">
+            <button style="display: none;">0</button>
         </div>
     </div>
 </body>
