Bare-bones stylings done

--- a/admin-dashboard/index.html
+++ b/admin-dashboard/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Admin Dashboard</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="wrapper">
@@ -19,9 +20,11 @@
                 </ul>
             </div>
             <div class="settings">
-                <li>Settings</li>
-                <li>Support</li>
-                <li>Privacy</li>
+                <ul>
+                    <li>Settings</li>
+                    <li>Support</li>
+                    <li>Privacy</li>
+                </ul>
             </div>
         </div>
 
@@ -35,9 +38,11 @@
                     <span>Hi there</span>
                     <span>Mr. Baton (@baton)</span>
                 </div>
-                <button>New</button>
-                <button>Upload</button>
-                <button>Share</button>
+                <div class="nav-buttons">
+                    <button>New</button>
+                    <button>Upload</button>
+                    <button>Share</button>
+                </div>
             </div>
             <div class="main-area">
                 <div class="projects">
