Improvments to flexibility (smaller font in places, right bar smaller)

--- a/admin-dashboard/index.html
+++ b/admin-dashboard/index.html
@@ -115,6 +115,7 @@
                             ea ipsa, vel delectus officia!
                         </p>
                     </div>
+                    <div class="delimiter"></div>
                     <div class="announce">
                         <h5>Community Share Day</h5>
                         <p>
@@ -123,6 +124,7 @@
                             numquam.
                         </p>
                     </div>
+                    <div class="delimiter"></div>
                     <div class="announce"> 
                         <h5>Updated Privacy Policy</h5>
                         <p>
@@ -142,7 +144,7 @@
                     </div>
                     <div class="user">
                         <h5>@ben</h5>
-                        <p>RustTheBestProgrammingLanguage</p>
+                        <p>RustyRust</p>
                     </div>
                     <div class="user">
                         <h5>@godette</h5>
