Added some silly emojies

--- a/admin-dashboard/index.html
+++ b/admin-dashboard/index.html
@@ -11,32 +11,38 @@
             <h2>Dashboard</h2>
             <div class="community">
                 <ul>
-                    <li>Home</li>
-                    <li>Profile</li>
-                    <li>Messages</li>
-                    <li>History</li>
-                    <li>Tasks</li>
-                    <li>Communities</li>
+                    <li>🏠 Home</li>
+                    <li>👱 Profile</li>
+                    <li>📪 Messages</li>
+                    <li>⌚ History</li>
+                    <li>📁 Tasks</li>
+                    <li>🙌 Community</li>
                 </ul>
             </div>
             <div class="settings">
                 <ul>
-                    <li>Settings</li>
-                    <li>Support</li>
-                    <li>Privacy</li>
+                    <li>⚙ Settings</li>
+                    <li>🎧 Support</li>
+                    <li>🛡 Privacy</li>
                 </ul>
             </div>
         </div>
 
         <div class="content">
             <div class="search-bar">
-                <input type="search">
-                <span>Mr. Baton</span>
+                <div>
+                    <span>🔍</span>
+                    <input type="search">
+                </div>
+                <div class="notifs">
+                    <span>🔔</span>
+                    <span>🥖 Mr. Baton</span>
+                </div>
             </div>
             <div class="nav-bar">
                 <div class="greeting">
-                    <span>Hi there</span>
-                    <span>Mr. Baton (@baton)</span>
+                    <span class="small">Hi there</span>
+                    <span class="big">🥖 Mr. Baton <span class="tag">(@baton)</span></span>
                 </div>
                 <div class="nav-buttons">
                     <button>New</button>
@@ -47,7 +53,7 @@
             <div class="main-area">
                 <div class="projects">
                     <div class="card">
-                        <h4>Passwrod Manager</h4>
+                        <h4>Password Manager</h4>
                         <p>
                             Lorem ipsum dolor sit amet, 
                             consectetur adipisicing elit. Nulla dolores 
@@ -135,19 +141,19 @@
                 </div>
                 <div class="trending">
                     <div class="user">
-                        <h5>@tantan</h5>
+                        <h4>👱 <span class="tag">@tantan</span></h5>
                         <p>3d Cellular Automata</p>
                     </div>
                     <div class="user">
-                        <h5>@baton</h5>
+                        <h4>🥖 <span class="tag">@baton</span></h5>
                         <p>Password Manager</p>
                     </div>
                     <div class="user">
-                        <h5>@ben</h5>
-                        <p>RustyRust</p>
+                        <h4>🐦 <span class="tag">@ben</span></h5>
+                        <p>Rusty Rust</p>
                     </div>
                     <div class="user">
-                        <h5>@godette</h5>
+                        <h4>👧 <span class="tag">@godette</span></h5>
                         <p>Godot Engine</p>
                     </div>
                 </div>
