More emojies and size tweakings

--- a/admin-dashboard/index.html
+++ b/admin-dashboard/index.html
@@ -114,6 +114,7 @@
                     </div>
                 </div>
                 <div class="announcements">
+                    <h3>Announcements</h3>
                     <div class="announce">
                         <h5>Site Maintenance</h5>
                         <p>
@@ -140,6 +141,7 @@
                     </div>
                 </div>
                 <div class="trending">
+                    <h3>Trending</h3>
                     <div class="user">
                         <h4>👱 <span class="tag">@tantan</span></h5>
                         <p>3d Cellular Automata</p>
