Added titles to content

--- a/admin-dashboard/index.html
+++ b/admin-dashboard/index.html
@@ -52,6 +52,7 @@
             </div>
             <div class="main-area">
                 <div class="projects">
+                    <h3 class="title">Projects</h3>
                     <div class="card">
                         <h4>Password Manager</h4>
                         <p>
@@ -114,7 +115,7 @@
                     </div>
                 </div>
                 <div class="announcements">
-                    <h3>Announcements</h3>
+                    <h3 class="title">Announcements</h3>
                     <div class="announce">
                         <h5>Site Maintenance</h5>
                         <p>
@@ -141,7 +142,7 @@
                     </div>
                 </div>
                 <div class="trending">
-                    <h3>Trending</h3>
+                    <h3 class="title">Trending</h3>
                     <div class="user">
                         <h4>👱 <span class="tag">@tantan</span></h5>
                         <p>3d Cellular Automata</p>
