--- a/recipes/index.html
+++ b/recipes/index.html
@@ -1,21 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Homepage</title>
-        <link rel="stylesheet" href="styles/index.css">
-    </head>
-    <body>
-        <div>
-            <h1>Odin Recipes</h1>
 
-            <img src="./images/chef.jpg" alt="Chef">
+<head>
+    <title>Odin Recipes</title>
+    <meta charset="UTF-8">
+</head>
 
-            <ul>
-                <li><a href="recipes/lasagna.html">Lasagna recipe</a></li>
-                <li><a href="recipes/charlotte.html">Charlotte recipe</a></li>
-                <li><a href="recipes/borscht.html">Borscht recipe</a></li>
-            </ul>
-        </div>
-    </body>
+<body>
+    <h1>Odin Recipes</h1>
+    <a href="recipes/lasagna.html">Lasagna Recipe</a>
+</body>
+
 </html>
