--- a/recipes/recipes/lasagna.html
+++ b/recipes/recipes/lasagna.html
@@ -1,59 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <title>Lasagna Recipe</title>
     <meta charset="UTF-8">
-    <title>Lasagna</title>
-    <link rel="stylesheet" href="../styles/recipe.css">
 </head>
+
 <body>
-<div>
     <h1>Lasagna</h1>
-
-    <img src="../images/lasagna-image.jpg" alt="Finished lasagna">
-
-    <h2>Description</h2>
-    <p>
-        <strong>Prep</strong>: 30 mins. <strong>Cook</strong>: 30 mins. <strong>Total</strong>: 1 hr.
-        <strong>Servings</strong>: 8. <strong>Yield</strong>: 1 9x13 inch pan
-    </p>
-
-    <h2>Ingredients</h2>
-    <ul>
-        <li>1 (16 ounce) package lasagna noodles</li>
-        <li>salt and pepper to taste</li>
-        <li>1 (16 ounce) jar spaghetti sauce</li>
-        <li>1 clove garlic, minced</li>
-        <li>½ pound shredded mozzarella cheese</li>
-        <li>½ pound shredded Cheddar cheese</li>
-        <li>1 pint ricotta cheese</li>
-        <li>1 pound lean ground beef</li>
-    </ul>
-
-    <h2>Steps</h2>
-    <ol>
-        <li>Bring a large pot of lightly salted water to a boil. Add pasta and 
-            cook for 8 to 10 minutes or until al dente; drain.</li>
-
-        <li>Preheat oven to 350 degrees F (175 degrees C). In a large 
-            skillet over medium-high heat, brown beef and season with salt 
-            and pepper; drain. Stir in spaghetti sauce and garlic and simmer 
-            5 minutes.</li>
-
-        <li>In a medium bowl, combine mozzarella, Cheddar and ricotta; 
-            stir well. In 9x13 inch pan, alternate layers of noodles, 
-            meat mixture and cheese mixture until pan is filled.</li>
-
-        <li>Bake in preheated oven for 30 minutes, or until cheese 
-            is melted and bubbly.</li>
-    </ol>
-
-    <h2>Checkout other recipes</h2>
-    <ul>
-        <li><a href="./charlotte.html">Charlotte recipe</a></li>
-        <li><a href="./borscht.html">Borscht recipe</a></li>
-    </ul>
-
-    <a href="../index.html" id="return-link">Return to main page</a>
-</div>
 </body>
+
 </html>
