--- a/recipes/index.html
+++ b/recipes/index.html
@@ -8,7 +8,10 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna Recipe</a>
+    <ul>
+        <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
+        <li><a href="recipes/apple-pie.html">Apple Pie Recipe</a></li>
+    </ul>
 </body>
 
 </html>
