Experiment with media queries

--- a/recipes/recipes/lasagna.html
+++ b/recipes/recipes/lasagna.html
@@ -9,10 +9,12 @@
 
 <body>
     <div class="links">
-        <h2>Other Recipes</h2>
-        <ul>
-            <li><a href="./apple-pie.html">Apple Pie Recipe</a></li>
-        </ul>
+        <div class="wrapper">
+            <h2>Other Recipes</h2>
+            <ul>
+                <li><a href="./apple-pie.html">Apple Pie Recipe</a></li>
+            </ul>
+        </div>
     </div>
     <div class="content">
 
