Basic layout + sidebar

--- a/admin-dashboard/index.html
+++ b/admin-dashboard/index.html
@@ -1,167 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Admin Dashboard</title>
+    <title>Document</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <div class="wrapper">
-        <div class="sidebar">
-            <h2>Dashboard</h2>
-            <div class="community">
-                <ul>
-                    <li>🏠 Home</li>
-                    <li>👱 Profile</li>
-                    <li>📪 Messages</li>
-                    <li>⌚ History</li>
-                    <li>📁 Tasks</li>
-                    <li>🙌 Community</li>
-                </ul>
-            </div>
-            <div class="settings">
-                <ul>
-                    <li>⚙ Settings</li>
-                    <li>🎧 Support</li>
-                    <li>🛡 Privacy</li>
-                </ul>
-            </div>
+    <div class="sidebar">
+        <div class="logo">
+            ℹ️ Dashboard
         </div>
 
-        <div class="content">
-            <div class="search-bar">
-                <div>
-                    <span>🔍</span>
-                    <input type="search">
-                </div>
-                <div class="notifs">
-                    <span>🔔</span>
-                    <span>🥖 Mr. Baton</span>
-                </div>
-            </div>
-            <div class="nav-bar">
-                <div class="greeting">
-                    <span class="small">Hi there</span>
-                    <span class="big">🥖 Mr. Baton <span class="tag">(@baton)</span></span>
-                </div>
-                <div class="nav-buttons">
-                    <button>New</button>
-                    <button>Upload</button>
-                    <button>Share</button>
-                </div>
-            </div>
-            <div class="main-area">
-                <div class="projects">
-                    <h3 class="title">Projects</h3>
-                    <div class="card">
-                        <h4>Password Manager</h4>
-                        <p>
-                            Lorem ipsum dolor sit amet, 
-                            consectetur adipisicing elit. Nulla dolores 
-                            quisquam facilis fugit porro, molestiae 
-                            exercitationem at architecto fuga corporis!
-                        </p>
-                    </div>
-                    <div class="card">
-                        <h4>Todo App</h4>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur 
-                            adipisicing elit. Expedita, velit voluptatem. 
-                            Odit ipsam consequatur commodi rerum, ad ducimus 
-                            quae omnis quidem eius et ullam delectus ex itaque 
-                            recusandae quod. Consequuntur.
-                        </p>
-                    </div>
-                    <div class="card">
-                        <h4>Impossible App</h4>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur 
-                            adipisicing elit. Quis, ipsa!
-                        </p>
-                    </div>
-                    <div class="card">
-                        <h4>Easy Peasy Lemon Squeazy App</h4>
-                        <p>
-                            Lorem ipsum, dolor sit amet consectetur 
-                            adipisicing elit. Repellat
-                            laudantium soluta nostrum, illum iure ipsam! Quas necessitatibus magnam
-                            cumque eum a? Fuga placeat illum mollitia!
-                        </p>
-                    </div>
-                    <div class="card">
-                        <h4>Ad Blocker</h4>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur 
-                            adipisicing elit. Tempora, dicta.
-                            Modi facilis enim nam eos dolorem. 
-                            Autem quia voluptatibus ipsam itaque
-                            sequi, incidunt maiores? Dignissimos 
-                            quia ipsam consequuntur porro quod.
-                        </p>
-                    </div>
-                    <div class="card">
-                        <h4>Money Maker</h4>
-                        <p>
-                            Lorem ipsum dolor, sit amet consectetur 
-                            adipisicing elit. Autem sint
-                            placeat vitae? Ab fuga veritatis itaque 
-                            ullam error officiis facere
-                            saepe nisi non harum voluptates vitae 
-                            quibusdam dignissimos asperiores,
-                            doloremque tenetur aut! Quas fuga reiciendis 
-                            a tempore sint laborum
-                            vero?
-                        </p>
-                    </div>
-                </div>
-                <div class="announcements">
-                    <h3 class="title">Announcements</h3>
-                    <div class="announce">
-                        <h5>Site Maintenance</h5>
-                        <p>
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis a
-                            ea ipsa, vel delectus officia!
-                        </p>
-                    </div>
-                    <div class="delimiter"></div>
-                    <div class="announce">
-                        <h5>Community Share Day</h5>
-                        <p>
-                            Lorem ipsum dolor sit amet 
-                            consectetur adipisicing elit. Deleniti,
-                            numquam.
-                        </p>
-                    </div>
-                    <div class="delimiter"></div>
-                    <div class="announce"> 
-                        <h5>Updated Privacy Policy</h5>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis
-                            voluptate aspernatur qui ea inventore possimus?
-                        </p>
-                    </div>
-                </div>
-                <div class="trending">
-                    <h3 class="title">Trending</h3>
-                    <div class="user">
-                        <h4>👱 <span class="tag">@tantan</span></h5>
-                        <p>3d Cellular Automata</p>
-                    </div>
-                    <div class="user">
-                        <h4>🥖 <span class="tag">@baton</span></h5>
-                        <p>Password Manager</p>
-                    </div>
-                    <div class="user">
-                        <h4>🐦 <span class="tag">@ben</span></h5>
-                        <p>Rusty Rust</p>
-                    </div>
-                    <div class="user">
-                        <h4>👧 <span class="tag">@godette</span></h5>
-                        <p>Godot Engine</p>
-                    </div>
-                </div>
-            </div>
+        <div class="section">
+            <div>🏠 Home</div>
+            <div>📇 Profile</div>
+            <div>📬 Messages</div>
+            <div>⌚ History</div>
+            <div>🗃️ Tasks</div>
+            <div>🫂 Communities</div>
+        </div>
+
+        <div class="section">
+            <div>⚙️ Settings</div>
+            <div>❔ Support</div>
+            <div>🛡️ Privacy</div>
+
         </div>
     </div>
+    <div class="header">
+
+    </div>
+    <div class="main-container">
+
+    </div>
+
 </body>
+
 </html>
