Make first half of the header

--- a/admin-dashboard/index.html
+++ b/admin-dashboard/index.html
@@ -30,7 +30,18 @@
         </div>
     </div>
     <div class="header">
+        <div class="search">
+            🔍 <input type="text">
+        </div>
+        <div class="notification">
+            🔔 <div class="profile"><span class="avatar">🥖</span>Mr. Baton</div>
+        </div>
+        <div class="greeting">
 
+        </div>
+        <div class="controls">
+
+        </div>
     </div>
     <div class="main-container">
 
