--- a/admin-dashboard/index.html
+++ b/admin-dashboard/index.html
@@ -37,10 +37,16 @@
             🔔 <div class="profile"><span class="avatar">🥖</span>Mr. Baton</div>
         </div>
         <div class="greeting">
-
+            <span class="avatar">🥖</span>
+            <div class="text">
+                <div class="pre">Hi there,</div>
+                <div class="tag">Mr. Baton (@baton)</div>
+            </div>
         </div>
         <div class="controls">
-
+            <button>New</button>
+            <button>Upload</button>
+            <button>Share</button>
         </div>
     </div>
     <div class="main-container">
