Create announcements section

--- a/admin-dashboard/index.html
+++ b/admin-dashboard/index.html
@@ -50,6 +50,36 @@
         </div>
     </div>
     <div class="main-container">
+        <div class="projects">
+            <div class="title">Your Projects</div>
+            <div class="content"></div>
+
+        </div>
+        <div class="announcements">
+            <div class="title">Announcements</div>
+            <div class="content">
+                <div>
+                    <div class="topic">Site Maintenance</div>
+                    <div class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis nostrum neque
+                        recusandae reiciendis ducimus...</div>
+                </div>
+                <div>
+                    <div class="topic">Community Share Day</div>
+                    <div class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur a quae
+                        nostrum iure! Repellat, rem.</div>
+                </div>
+                <div>
+                    <div class="topic">Updated Privacy Policy</div>
+                    <div class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus, veritatis
+                        quaerat...</div>
+                </div>
+            </div>
+        </div>
+        <div class="trending">
+            <div class="title">Trending</div>
+            <div class="content"></div>
+        </div>
+    </div>
 
     </div>
 
