Add trending content

--- a/admin-dashboard/index.html
+++ b/admin-dashboard/index.html
@@ -77,7 +77,36 @@
         </div>
         <div class="trending">
             <div class="title">Trending</div>
-            <div class="content"></div>
+            <div class="content">
+                <div>
+                    <span class="avatar tantan">👨</span>
+                    <div class="text">
+                        <div class="tag">@tantan</div>
+                        <div class="project">3D Cellular Automata</div>
+                    </div>
+                </div>
+                <div>
+                    <span class="avatar ben">🐦</span>
+                    <div class="text">
+                        <div class="tag">@ben</div>
+                        <div class="project">Rusty Rust</div>
+                    </div>
+                </div>
+                <div>
+                    <span class="avatar godette">👧</span>
+                    <div class="text">
+                        <div class="tag">@godette</div>
+                        <div class="project">Godot Engine</div>
+                    </div>
+                </div>
+                <div>
+                    <span class="avatar">🥖</span>
+                    <div class="text">
+                        <div class="tag">@baton</div>
+                        <div class="project">Password Manager</div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
