--- a/admin-dashboard/index.html
+++ b/admin-dashboard/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Dashboard</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -19,7 +19,7 @@
             <div>📬 Messages</div>
             <div>⌚ History</div>
             <div>🗃️ Tasks</div>
-            <div>🫂 Communities</div>
+            <div>🫂 Community</div>
         </div>
 
         <div class="section">
@@ -52,7 +52,47 @@
     <div class="main-container">
         <div class="projects">
             <div class="title">Your Projects</div>
-            <div class="content"></div>
+            <div class="content">
+                <div class="card">
+                    <div class="name">Password Manager</div>
+                    <div class="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet accusamus,
+                        nemo officiis iste voluptatem harum?</div>
+                    <div class="actions">⭐ 👁️ 📣</div>
+                </div>
+                <div class="card">
+                    <div class="name">Music Player</div>
+                    <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur
+                        consequuntur autem quis aut! Quae eligendi repellat eum iure ipsum illum?</div>
+                    <div class="actions">⭐ 👁️ 📣</div>
+                </div>
+                <div class="card">
+                    <div class="name">Unstable Obelisks</div>
+                    <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, numquam
+                        ullam, adipisci earum tempore quo beatae quaerat rerum deserunt modi ea quam iste dolorum sed.
+                    </div>
+                    <div class="actions">⭐ 👁️ 📣</div>
+                </div>
+                <div class="card">
+                    <div class="name">Game Engine</div>
+                    <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
+                        cupiditate ipsa molestiae nemo. Autem, nemo?</div>
+                    <div class="actions">⭐ 👁️ 📣</div>
+                </div>
+                <div class="card">
+                    <div class="name">Text Editor</div>
+                    <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, voluptas
+                        asperiores inventore amet perferendis ad! Laborum est dicta maiores ipsa ratione nesciunt
+                        voluptatum.</div>
+                    <div class="actions">⭐ 👁️ 📣</div>
+                </div>
+                <div class="card">
+                    <div class="name">Pokedex App</div>
+                    <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod voluptate
+                        fugiat, illo doloribus dolorem similique? Harum, ea. Laboriosam maxime recusandae laborum
+                        quisquam, harum, voluptatem deleniti exercitationem, officiis sint fugiat architecto?</div>
+                    <div class="actions">⭐ 👁️ 📣</div>
+                </div>
+            </div>
 
         </div>
         <div class="announcements">
