Change avatar emoji

--- a/admin-dashboard/index.html
+++ b/admin-dashboard/index.html
@@ -34,10 +34,10 @@
             🔍 <input type="text">
         </div>
         <div class="notification">
-            🔔 <div class="profile"><span class="avatar">🥖</span>Mr. Baton</div>
+            🔔 <div class="profile"><span class="avatar">🍪</span>Mr. Baton</div>
         </div>
         <div class="greeting">
-            <span class="avatar">🥖</span>
+            <span class="avatar">🍪</span>
             <div class="text">
                 <div class="pre">Hi there,</div>
                 <div class="tag">Mr. Baton (@baton)</div>
@@ -140,7 +140,7 @@
                     </div>
                 </div>
                 <div>
-                    <span class="avatar">🥖</span>
+                    <span class="avatar">🍪</span>
                     <div class="text">
                         <div class="tag">@baton</div>
                         <div class="project">Password Manager</div>
