--- a/todo/src/template.html
+++ b/todo/src/template.html
@@ -9,7 +9,34 @@
 </head>
 
 <body>
+    <header>Todo</header>
+    <div class="main-content">
 
+        <div class="projects-sidebar">
+            <div class="project">
+                <input type="text" value="Default" id="title" disabled>
+                <button class="edit">Edit</button>
+                <button class="remove">Remove</button>
+            </div>
+        </div>
+
+        <div class="todos-area">
+            <div class="todo">
+                <textarea name="description" id="description" cols="30" rows="1" disabled>Buy Milk</textarea>
+                <button class="edit">Edit</button>
+                <button class="remove">Remove</button>
+                <label for="due-date">
+                    Due:
+                    <input type="date" name="due-date" id="due-date" value="2023-09-01" disabled>
+                </label>
+                <label for="priority">
+                    Priority:
+                    <input type="number" name="priority" id="priority" value="1" disabled>
+                </label>
+            </div>
+        </div>
+
+    </div>
 </body>
 
 </html>
