--- a/todo/src/template.html
+++ b/todo/src/template.html
@@ -14,28 +14,15 @@
 
         <div class="projects-sidebar">
             <h2 id="sidebar-title">Projects</h2>
-            <div class="project">
-                <input type="text" value="Default" id="title" disabled>
-                <button class="edit">⚙️</button>
-                <button class="remove">🗑️</button>
+            <div class="project-container">
             </div>
+            <button class="add project">Add Project</button>
         </div>
 
         <div class="todos-area">
-            <div class="todo">
-                <input type="checkbox" name="done-check" id="done-check">
-                <input name="description" id="description" value="Buy Milk" disabled>
-                <label for="due-date">
-                    📅
-                    <input type="date" name="due-date" id="due-date" value="2023-09-01" disabled>
-                </label>
-                <label for="priority">
-                    ⚠️
-                    <input type="number" name="priority" id="priority" value="1" min="1" max="255" size="4" disabled>
-                </label>
-                <button class="edit">⚙️</button>
-                <button class="remove">🗑️</button>
+            <div class="todo-container">
             </div>
+            <button class="add project">Add Todo</button>
         </div>
 
     </div>
