Add ability to add projects and todos

--- a/todo/src/template.html
+++ b/todo/src/template.html
@@ -22,7 +22,7 @@
         <div class="todos-area">
             <div class="todo-container">
             </div>
-            <button class="add project">Add Todo</button>
+            <button class="add todo">Add Todo</button>
         </div>
 
     </div>
