--- a/recipes/src/pages/apple-pie.html
+++ b/recipes/src/pages/apple-pie.html
@@ -85,7 +85,7 @@
                 baking until apples are soft, 35 to 45 minutes.</li>
         </ol>
 
-        <a href="../index.html">Back To Recipe Page</a>
+        <a href="../../index.html">Back To Recipe Page</a>
     </div>
     <div></div>
 </body>
