--- a/recipes/src/pages/lasagna.html
+++ b/recipes/src/pages/lasagna.html
@@ -78,7 +78,7 @@
                 lasagna for 15 minutes before serving.</li>
         </ol>
 
-        <a href="../index.html">Back To Recipe Page</a>
+        <a href="../../index.html">Back To Recipe Page</a>
     </div>
     <div></div>
 </body>
