--- a/dynamic-ui/index.html
+++ b/dynamic-ui/index.html
@@ -5,41 +5,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" />
     <title>Document</title>
-    <link rel="stylesheet" href="./src/styles.css" />
     <script src="./src/scripts/drop-down.js" type="module" defer></script>
-    <script src="./src/scripts/tabs-navigation.js" defer></script>
+    <script src="./src/scripts/image-slider.js" defer></script>
     <script src="./src/script.js" type="module" defer></script>
 </head>
 
 <body>
-    <div class="tabs-navigation">
-        <div class="tabs">
-            <button default data-html="./src/tabs/home.html" class="tab">
-                Home
-            </button>
-            <button data-html="./src/tabs/store.html" class="tab">
-                Store
-            </button>
-            <div class="drop-down">
-                <button class="trigger">More</button>
-                <div class="items">
-                    <button class="item tab" data-html="./src/tabs/contacts.html">
-                        Contacts
-                    </button>
-                </div>
-            </div>
-        </div>
-        <div class="content"></div>
-    </div>
-
-    <div class="drop-down second">
+    <div class="drop-down">
         <button class="trigger">Menu</button>
         <div class="items">
-            <div class="item">Item 1111</div>
+            <div class="item">Item 1</div>
             <div class="item">Item 2</div>
             <div class="item">Item 3</div>
         </div>
     </div>
+    <span class="output"></span>
 
     <div class="image-slider">
         <div class="image-display">
