Start pulling data from weather api

--- a/weather-app/src/template.html
+++ b/weather-app/src/template.html
@@ -39,14 +39,14 @@
 
     <main>
         <div class="container">
-            <h1 class="city">London</h1>
+            <h1 class="city">Moscow</h1>
 
             <section class="today">
                 <h2 class="date">9 June, Sunday</h2>
 
                 <div class="card">
                     <div class="brief">
-                        <p class="degrees">26°</p>
+                        <p class="degrees">26</p>
                         <p class="info">
                             <span class="status">Clear</span>
                             <span class="icon">☀️</span>
@@ -58,7 +58,7 @@
                             <div class="info">
                                 <span class="status">Clear</span>
                                 <span class="icon">☀️</span>
-                                <span class="degrees">24°</span>
+                                <span class="degrees">24</span>
                             </div>
                         </div>
                         <div class="field">
@@ -66,14 +66,14 @@
                             <div class="info">
                                 <span class="status">Clouds</span>
                                 <span class="icon">☁️</span>
-                                <span class="degrees">24°</span>
+                                <span class="degrees">24</span>
                             </div>
                         </div>
                     </div>
                 </div>
             </section>
 
-            <section class="tommorow">
+            <section class="tomorrow">
                 <h2 class="date">10 June, Sunday</h2>
 
                 <div class="hourly">
@@ -82,7 +82,7 @@
                         <div class="info">
                             <span class="status">Clear</span>
                             <span class="icon">☀️</span>
-                            <span class="degrees">23°</span>
+                            <span class="degrees">23</span>
                         </div>
                     </div>
                     <div class="field">
@@ -90,7 +90,7 @@
                         <div class="info">
                             <span class="status">Snow</span>
                             <span class="icon">❄️️</span>
-                            <span class="degrees">5°</span>
+                            <span class="degrees">5</span>
                         </div>
                     </div>
                 </div>
