Add degree type switch

--- a/weather-app/src/template.html
+++ b/weather-app/src/template.html
@@ -26,14 +26,14 @@
         </label>
 
         <div class="degree-select">
-            <!-- <label for="celsius" class="celsius"> -->
-            <!--     <span>℃</span> -->
-            <!--     <input type="radio" name="degree" id="celsius" checked> -->
-            <!-- </label> -->
-            <!-- <label for="fahrenheit" class="fahrenheit"> -->
-            <!--     <span>℉</span> -->
-            <!--     <input type="radio" name="degree" id="fahrenheit"> -->
-            <!-- </label> -->
+            <label for="celsius" class="celsius">
+                <span>℃</span>
+                <input type="radio" name="degree" id="celsius" checked>
+            </label>
+            <label for="fahrenheit" class="fahrenheit">
+                <span>℉</span>
+                <input type="radio" name="degree" id="fahrenheit">
+            </label>
         </div>
     </header>
 
