Refactor the code

--- a/weather-app/src/template.html
+++ b/weather-app/src/template.html
@@ -39,60 +39,28 @@
 
     <main>
         <div class="container">
-            <h1 class="city">Moscow</h1>
+            <h1 class="city"></h1>
 
             <section class="today">
-                <h2 class="date">9 June, Sunday</h2>
+                <h2 class="date"></h2>
 
                 <div class="card">
                     <div class="brief">
-                        <p class="degrees">26</p>
+                        <p class="degrees">0</p>
                         <p class="info">
-                            <span class="status">Clear</span>
-                            <span class="icon">☀️</span>
+                            <span class="status"></span>
+                            <span class="icon"></span>
                         </p>
                     </div>
                     <div class="hourly">
-                        <div class="field">
-                            <span class="hour">9:00</span>
-                            <div class="info">
-                                <span class="status">Clear</span>
-                                <span class="icon">☀️</span>
-                                <span class="degrees">24</span>
-                            </div>
-                        </div>
-                        <div class="field">
-                            <span class="hour">12:00</span>
-                            <div class="info">
-                                <span class="status">Clouds</span>
-                                <span class="icon">☁️</span>
-                                <span class="degrees">24</span>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </section>
 
             <section class="tomorrow">
-                <h2 class="date">10 June, Sunday</h2>
+                <h2 class="date"></h2>
 
                 <div class="hourly">
-                    <div class="field">
-                        <span class="hour">9:00</span>
-                        <div class="info">
-                            <span class="status">Clear</span>
-                            <span class="icon">☀️</span>
-                            <span class="degrees">23</span>
-                        </div>
-                    </div>
-                    <div class="field">
-                        <span class="hour">12:00</span>
-                        <div class="info">
-                            <span class="status">Snow</span>
-                            <span class="icon">❄️️</span>
-                            <span class="degrees">5</span>
-                        </div>
-                    </div>
                 </div>
             </section>
         </div>
